Updated Menu Bar

--- a/Main_page.html
+++ b/Main_page.html
@@ -7,18 +7,22 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="style_sheet.css">
+
 
     <title>Front page</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="/Users/abby/Desktop/Comp Projects/HackNC2019-master/Play.html">Play</a></li>
-        <li><a href="/Users/abby/Desktop/Comp Projects/HackNC2019-master/Settings.html">Settings</a></li>
+        <li><a href="Main_page.html"; class ="active">Home</a></li>
+        <li><a href="Play.html">Play</a></li>
+        <li><a href="Settings.html">Settings</a></li>
       </ul>
     </nav>
+    <body>Welcome to Financial Fiends!</body>
+    <br>
+    <body></body>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
