--- a/Settings.html
+++ b/Settings.html
@@ -7,11 +7,20 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="style_sheet.css">
 
-    <title>Hello, world!</title>
+
+    <title>Front page</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <nav>
+      <ul>
+        <li><a href="Main_page.html">Home</a></li>
+        <li><a href="Play.html">Play</a></li>
+        <li><a href="Settings.html"; class ="active">Settings</a></li>
+      </ul>
+    </nav>
+    <body>Hey</body>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
