--- a/dashboard.html
+++ b/dashboard.html
@@ -16,9 +16,9 @@
     <nav>
       <ul>
         <li><a href="home.html">Home</a></li>
-        <li><a href="dashboard.html">Dashboard</a></li>
+        <li><a href="dashboard.html"; class ="active">Dashboard</a></li>
         <li><a href="friends.html">Friends</a></li>
-        <li style="float:right"><a href="settings.html"; style="text-align:left"; class ="active">Settings</a></li>
+        <li style="float:right"><a href="settings.html"; style= text-align:left;>Settings</a></li>
       </ul>
     </nav>
     <body>Welcome to Financial Fiends!</body>
