--- a/friends.html
+++ b/friends.html
@@ -10,17 +10,20 @@
     <link rel="stylesheet" href="style_sheet.css">
 
 
-    <title>Front page</title>
+    <title>Home</title>
   </head>
   <body>
     <nav>
       <ul>
-        <li><a href="Main_page.html">Home</a></li>
-        <li><a href="Play.html"; class ="active">Play</a></li>
-        <li><a href="Settings.html">Settings</a></li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="dashboard.html">Dashboard</a></li>
+        <li><a href="friends.html"; class ="active">Friends</a></li>
+        <li style="float:right"><a href="settings.html"; style= text-align:left;>Settings</a></li>
       </ul>
     </nav>
-    <body>Hi</body>
+    <body>Welcome to Financial Fiends!</body>
+    <br>
+    <body></body>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
