--- a/home.html
+++ b/home.html
@@ -10,19 +10,31 @@
     <link rel="stylesheet" href="style_sheet.css">
 
 
-    <title>Front page</title>
+    <title>Home</title>
   </head>
   <body>
     <nav>
       <ul>
-        <li><a href="Main_page.html"; class ="active">Home</a></li>
-        <li><a href="Play.html">Play</a></li>
-        <li><a href="Settings.html">Settings</a></li>
+        <li><a href="home.html"; class ="active">Home</a></li>
+        <li><a href="dashboard.html">Dashboard</a></li>
+        <li><a href="friends.html">Friends</a></li>
+        <li style="float:right"><a href="settings.html">Settings</a></li>
       </ul>
     </nav>
     <body>Welcome to Financial Fiends!</body>
     <br>
-    <body></body>
+    <br>
+    <body>Small intro</body>
+    <br>
+    <br>
+    <p>
+      <button>Login</button>
+      <button>Sign Up</button>
+    </p>
+    <br>
+    <body>Insert the rules of the game later!</body>
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
