Stellar website outline added

--- a/First Try Pages/home.html
+++ b/First Try Pages/home.html
@@ -28,8 +28,8 @@
     <br>
     <br>
     <p>
-      <button>Login</button>
-      <button>Sign Up</button>
+      <button class = "button">Login</button>
+      <button class = "button">Sign Up</button>
     </p>
     <br>
     <body>Insert the rules of the game later!</body>
