--- a/Webpage stuff/index.html
+++ b/Webpage stuff/index.html
@@ -238,7 +238,7 @@
           </ul>
         </nav>
         <!-- partial -->
-        <div class="main-panel">
+        <!-- <div class="main-panel">
           <div class="content-wrapper">
             <div class="row purchace-popup">
               <div class="col-12 stretch-card grid-margin">
@@ -253,7 +253,7 @@
                   </span>
                 </div>
               </div>
-            </div>
+            </div> -->
             <div class="row">
               <div class="col-md-12 grid-margin">
                 <div class="card">
@@ -268,7 +268,7 @@
                     <div class="row report-inner-cards-wrapper">
                       <div class=" col-md -6 col-xl report-inner-card">
                         <div class="inner-card-text">
-                          <span class="report-title">EXPENSE</span>
+                          <span class="report-title">PROFITS</span>
                           <h4>$32123</h4>
                           <span class="report-count"> 2 Reports</span>
                         </div>
