--- a/Webpage stuff/pages/tables/basic-table.html
+++ b/Webpage stuff/pages/tables/basic-table.html
@@ -15,7 +15,7 @@
     <!-- inject:css -->
     <!-- endinject -->
     <!-- Layout styles -->
-    <link rel="stylesheet" href="../../css/style.css" <!-- End layout styles -->
+    <link rel="stylesheet" href="../../css/style.css"> <!-- End layout styles -->
     <link rel="shortcut icon" href="../../images/favicon.png" />
   </head>
   <body>
