--- a/Webpage stuff/pages/samples/register.html
+++ b/Webpage stuff/pages/samples/register.html
@@ -37,7 +37,7 @@
                   <div class="form-group">
                     <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email">
                   </div>
-                  <div class="form-group">
+                  <!-- <div class="form-group">
                     <select class="form-control form-control-lg" id="exampleFormControlSelect2">
                       <option>Country</option>
                       <option>United States of America</option>
@@ -46,7 +46,7 @@
                       <option>Germany</option>
                       <option>Argentina</option>
                     </select>
-                  </div>
+                  </div> -->
                   <div class="form-group">
                     <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
                   </div>
